--- a/src/tailwindinput.css
+++ b/src/tailwindinput.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .bluebtn {
-    @apply rounded-full uppercase text-xs cursor-pointer bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-3
+    @apply rounded-full uppercase text-xs cursor-pointer bg-gradient-to-r from-blue-700 to-cyan-400 hover:bg-blue-700 text-white font-bold py-2 px-6
 }
 
 .redbtn {
@@ -11,12 +11,20 @@
 }
 
 .graybtn {
-    @apply rounded-full uppercase text-xs cursor-pointer bg-gray-400 hover:bg-gray-700 text-white font-bold py-2 px-3
+    @apply rounded-full uppercase text-xs cursor-pointer bg-gradient-to-r from-gray-600 to-gray-400 hover:bg-gray-700 text-white font-bold py-2 px-5
+}
+
+.greenbtn {
+    @apply rounded-full uppercase text-xs cursor-pointer bg-gradient-to-r from-green-700 to-green-400 hover:bg-gray-700 text-white font-bold py-2 px-6
 }
 
 .popup {
     @apply fixed inset-0 bg-gray-600 bg-opacity-50 flex justify-center items-center w-screen;
     transition: opacity 0.3s ease-in-out;
+}
+
+.bluebtn1 {
+    @apply rounded-full uppercase text-xs cursor-pointer bg-blue-200 text-blue-800 p-2 hover:bg-blue-300 rounded-full font-bold py-2 px-10
 }
 
 .popup-content {
@@ -44,12 +52,20 @@
     @apply bg-white p-6 rounded-lg shadow-lg max-w-md w-full transition duration-300 ease-in-out;
 }
 
-.form {
+.form1 {
     @apply max-w-md mx-auto p-10 bg-white rounded-lg shadow-lg md:max-w-fit lg:max-w-fit inset-20;
 }
 
-.form-content {
+.form-content1 {
     @apply flex flex-col space-y-6 md:space-y-8 lg:space-y-10 inset-20;
+}
+
+.form {
+    @apply max-w-md mx-auto p-10 bg-white rounded-lg shadow-lg;
+}
+
+.form-content {
+    @apply flex flex-col space-y-6;
 }
 
 /* Ensure resize handles are clickable */
