--- a/src/index.css
+++ b/src/index.css
@@ -665,6 +665,10 @@ video {
   margin-left: 0.5rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .mr-4 {
   margin-right: 1rem;
 }
@@ -737,6 +741,10 @@ video {
   height: 100%;
 }
 
+.max-h-40 {
+  max-height: 10rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -779,6 +787,10 @@ video {
 
 .max-w-3xl {
   max-width: 48rem;
+}
+
+.max-w-full {
+  max-width: 100%;
 }
 
 .max-w-md {
@@ -1088,10 +1100,6 @@ video {
   --tw-gradient-to-position: 90%;
 }
 
-.fill-blue-800 {
-  fill: #1e40af;
-}
-
 .fill-gray-600 {
   fill: #4b5563;
 }
@@ -1100,20 +1108,13 @@ video {
   fill: #374151;
 }
 
-.fill-cyan-800 {
-  fill: #155e75;
-}
-
-.fill-cyan-400 {
-  fill: #22d3ee;
-}
-
-.fill-cyan-600 {
-  fill: #0891b2;
-}
-
 .fill-indigo-600 {
   fill: #4f46e5;
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover {
@@ -1199,6 +1200,11 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pl-5 {
   padding-left: 1.25rem;
 }
@@ -1272,9 +1278,8 @@ video {
   font-weight: 600;
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+.italic {
+  font-style: italic;
 }
 
 .text-blue-500 {
